# AEGIS

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  test_demo.py
.github/workflows/: test.yml
screenshots/: demo_output.txt
src/aegis/: __init__.py  main.py
src/aegis.egg-info/: PKG-INFO  SOURCES.txt
src/aegis/api/: __init__.py  feedback.py  main.py
src/aegis/core/: __init__.py  config.py  models.py
src/aegis/data/: __init__.py  generator.py
src/aegis/features/: __init__.py  engine.py  extractors.py  store.py
src/aegis/graph/: __init__.py  database.py
src/aegis/ml/: __init__.py  detectors.py  xai.py
src/aegis/pipeline/: __init__.py  ingestion.py
